tests/fsharp/typecheck/sigs/neg39.bsl

neg39.fs(3,3,3,12): parse error FS0010: Unexpected keyword 'namespace' in implementation file. Expected incomplete structured construct at or before this point or other token.
