tests/fsharp/typecheck/sigs/neg39.fs
namespace Neg39a 

  namespace Neg39b


